# vrp-trash-collection

./: CMakeLists.txt  README.md  vrp.files
cmake/: FindGlog.cmake
doc/developers/: TrashCollection.md  optimization-moves.md
include/baseClasses/: config.h  logger.h  move.h  node.h  osrmclient.h  phantomnode.h  signalhandler.h  singleton.h  stats.h  twbucket.h  twc.h  tweval.h  twnode.h  twpath.h
include/baseTrash/: basevehicle.h  prob_trash.h  solution.h  trashconfig.h  trashnode.h
include/initTrash/: basicOperations.h  givenInitialSol.h  truckManyVisitsDump.h
include/nodes/: node.h  phantomnode.h  trashnode.h  tweval.h  twnode.h
include/osrm_connection/: osrmclient.h
include/solverTrash/: costvehicle.h  fleetOpt.h  optsol.h  tabubase.h  tabuopt.h  tripVehicle.h  vehicle.h
src/baseClasses/: basictypes.cpp  config.cpp  move.cpp  node.cpp  node.h  osrmclient.cpp  osrmclient.h  phantomnode.cpp  phantomnode.h  signalhandler.cpp  stats.cpp  stats.h  twbucket.cpp  twbucket.h  twc.cpp  twc.h  tweval.cpp  twnode.cpp  twnode.h  vrp_assert.cpp
src/baseTrash/: basevehicle.cpp  prob_trash.cpp  prob_trash.h  solution.cpp  trashconfig.cpp
src/baseTrash/forPostgres/: trashprob.h
src/initTrash/: basicOperations.cpp  truckManyVisitsDump.cpp
src/integration/: Makefile  trash.cpp
src/integration/shared/: vrptools.cpp
src/integration/shared/tests/: testphantomnode.cpp
src/integration/shared/tests/InputFiles/: rivera.dmatrix-time.txt
src/nodes/: node.cpp  phantomnode.cpp  tweval.cpp  twnode.cpp
src/notUsed/: extendedvehicle.cpp
src/osrm_connection/: osrmclient.cpp
src/solverTrash/: costvehicle.cpp  fleetOpt.cpp  optsol.cpp  tabuopt.cpp  tripVehicle.cpp  vehicle.cpp
src/trash-prob/baseTrash/: basevehicle.h  prob_trash.cpp  prob_trash.h  solution.cpp  solution.h  trashprob.cpp  trashprob.h
src/trash-prob/baseTrash/forPostgres/: trashprob.cpp
src/trash-prob/trashWithMovingDumps/integration/: Makefile  README.md  trash.cpp
src/trash-prob/trashWithMovingDumps/integration/shared/: CMakeLists.txt  loadfromfiles.cpp  loadfromfiles.h  vrptools.cpp  vrptools.h
src/trash-prob/trashWithMovingDumps/integration/shared/cmake/: Findrapidjson.cmake
src/trash-prob/trashWithMovingDumps/integration/shared/others/: nearest.hpp
src/trash-prob/trashWithMovingDumps/integration/shared/tests/: CMakeLists.txt  test001.cpp  test002.cpp  testphantomnode.cpp  testpoint.cpp
src/trash-prob/trashWithMovingDumps/integration/shared/tests/InputFiles/: rivera.containers.txt  riverasoca.dmatrix-time.txt
src/trash-prob/trashWithMovingDumps/integration/shared/tests/nodes/: rivera.txt
src/trash-prob/trashWithMovingDumps/integration/shared/tests/results/: .rivera.txt.kate-swp  rivera.txt
src/trash-prob/trashWithMovingDumps/solverTrash/: costvehicle.cpp  tripVehicle.cpp  tripVehicle.h  vehicle.h
src/trash-prob/trashWithMovingDumps/tests/: a_du_rm_cl_01.containers.txt
tests/partialsolutions/: .directory  muni-c-insertBigSubpathAtBegin.txt
tools/: Doxyfile
tools/code_style/: astyle.conf
tools/notUsed/: extendedvehicle.h  givenInitialSol.cpp
tools/notUsed/shared/: loadfromfiles.cpp
tools/notUsed/shared/tests/InputFiles/: riverasoca.containers.txt  riverasoca.dmatrix-time.txt.original
tools/osrm-work/: README.md
tools/vrp-info/: vrp.includes
